# COMPASS

./: .gitignore  README.md  Untitled.ipynb  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/apps/: sptx_visium_map_spots.py  sptx_visium_match_wsi.py
src/compass/: __init__.py  _magnif.py  _misc.py  _mri.py  _pyr.py  _wsi.py  annot.py  annot_sqlite_storage.py  core.py  imreg.py  mask.py  sample.py  sampler.py  stain.py  tissue.py
src/compass/sptx/: visium_v1.py
src/compass/tests/: test_annot.ipynb  test_annot_sqlite.ipynb  test_mri2tiff.ipynb  test_wsi2hdf5.ipynb  test_wsi2netcdf4.ipynb
src/cpath/: __init__.py  tissue.py
src/tools/: export_minimal_data.ipynb
src/tools/visium_v1/: visium_spanorm.py  visium_v1-qc_and_norm.ipynb
