[project]
name = "compass"
version = "0.1.6"
description = "Computational pathology and spatial statistics"
authors = [
    {name = "Vlad Popovici",email = "popovici@bioxlab.org"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask[array,dataframe] (>=2025.01.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "h5py (>=3.15.1,<4.0.0)",
    "hdf5plugin (>=6.0.0,<7.0.0)",
    "pyvips (>=3.1.1,<4.0.0)",
    "simplejson (>=3.20.2,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "mahotas (>=1.4.18,<2.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "openslide-bin (>=4.0.0.10,<5.0.0.0)",
    "openslide-python (>=1.4.3,<2.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "orjson (>=3.11.5,<4.0.0)",
    "simpleitk (>=2.5.3,<3.0.0)",
    "pandas-stubs (>=2.3.3,<2.4.0)",
]

[dependency-groups]
dev = [
    "matplotlib (>=3.10.8,<4.0.0)",
    "ipython (>=9.8.0,<10.0.0)",
    "jupyterlab (>=4.5.1,<5.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
